--- a/WCSTrainer/Pages/Shared/_People.cshtml
+++ b/WCSTrainer/Pages/Shared/_People.cshtml
@@ -77,7 +77,7 @@
             <p id="status" class="two"></p>
          </div>
          <div class="btn-container">
-            <a class="btn btnBlue bg-btn" onclick="linkToUser()">View User Details</a>
+            <a class="btn btnWhite bg-btn" onclick="linkToUser()">View User Details</a>
          </div>
       </div>
    </div>
