--- a/WCSTrainer/Pages/TrainingOrders/Edit.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Edit.cshtml
@@ -58,10 +58,10 @@
                               <div class="selections">
                                  <ul id="groupList" class="pill-container">
                                     @foreach (var trainerGroup in Model.TrainingOrder.TrainerGroups) {
-                                       <li class="pill removable" value="@trainerGroup.Id" onclick="removeItem(this, 'group')">@trainerGroup.Name</li>
+                                       <li class="pill removable" value="@trainerGroup.Id">@trainerGroup.Name</li>
                                     }
                                  </ul>
-                                 <div class="btn bg-btn btnWhite" onclick="openComponent('group')">Select</div>
+                                 <div class="btn bg-btn btnWhite">Select</div>
                               </div>
                            </div>
                         </div>
