--- a/WCSTrainer/wwwroot/css/site.css
+++ b/WCSTrainer/wwwroot/css/site.css
@@ -905,6 +905,7 @@ nav {
 					flex-grow: 1;
 					background-color: var(--gray1);
 					border-bottom: 1px solid var(--gray4);
+					font-size: 17px;
 				}
 
 					.people-component .people-container .btns-container .btns .btn.selected {
@@ -1027,12 +1028,12 @@ nav {
 
 		.people-component .details .top {
 			display: flex;
-			flex-direction: column;
-			flex-grow: 2;
 			border-bottom: 1px solid var(--gray4);
+			flex-grow: 1;
 		}
 
 			.people-component .details .top .btn-container {
+				margin-top: 20px;
 				display: flex;
 			}
 
@@ -1045,9 +1046,7 @@ nav {
 			.people-component .details .top .info-container {
 				display: none;
 				flex-direction: column;
-				gap: 10px;
 				font-size: 18px;
-				height: 100%;
 			}
 
 				.people-component .details .top .info-container .title {
@@ -1081,6 +1080,7 @@ nav {
 				flex-direction: column;
 				gap: 15px;
 				flex-grow: 1;
+				font-size: 18px;
 			}
 
 				.people-component .details .bottom .list-container .list {
