--- a/WCSTrainer/Pages/TrainingOrders/Edit.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Edit.cshtml
@@ -46,7 +46,7 @@
                                        </li>
                                     }
                                  </ul>
-                                 <div class="btn bg-btn btnWhite" onclick="openPeopleComponent('trainer')">
+                                 <div class="btn bg-btn btnWhite" onclick="openComponent('trainer')">
                                     <p>Select</p>
                                  </div>
                               </div>
@@ -64,7 +64,7 @@
                                        <li class="pill removable" value="@trainerGroup.Id">@trainerGroup.Name</li>
                                     }
                                  </ul>
-                                 <div class="btn bg-btn btnWhite" onclick="openGroupsComponent()">Select</div>
+                                 <div class="btn bg-btn btnWhite" onclick="openComponent('group')">Select</div>
                               </div>
                            </div>
                         </div>
@@ -86,7 +86,7 @@
                                     }
                                  }
                               </ul>
-                              <div class="btn bg-btn btnWhite" onclick="openPeopleComponent('trainee')"><p>Select</p></div>
+                              <div class="btn bg-btn btnWhite" onclick="openComponent('trainee')"><p>Select</p></div>
                               <input id="traineeInput" asp-for="TrainingOrder.TraineeId" hidden />
                            </div>
                         </div>
