--- a/WCSTrainer/Pages/Shared/_People.cshtml
+++ b/WCSTrainer/Pages/Shared/_People.cshtml
@@ -84,11 +84,11 @@
    <div class="bottom">
       <div class="list-container">
          <p>Selected:</p>
-         <ul id="partialTempList" class="list"></ul>
+         <ul id="peopleTempList" class="list"></ul>
       </div>
 
       <div class="btn-container">
-         <button class="btn btnWhite bg-btn" onclick="confirmSelectionInPartial()">Add Selection</button>
+         <button class="btn btnWhite bg-btn" onclick="confirmPeopleSelection()">Add Selection</button>
       </div>
    </div>
 </div>
