--- a/WCSTrainer/Pages/Lessons/Delete.cshtml
+++ b/WCSTrainer/Pages/Lessons/Delete.cshtml
@@ -5,30 +5,28 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
-
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>Lesson</h4>
-    <hr />
-    <dl class="row">
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Lesson.Name)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Lesson.Name)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Lesson.Description)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Lesson.Description)
-        </dd>
-    </dl>
-    
-    <form method="post">
-        <input type="hidden" asp-for="Lesson.Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-page="./Index">Back to List</a>
-    </form>
+<div class="panel">
+   <div class="body">
+      <partial name="_Sidebar" />
+      <div class="properties">
+         <div class="user-form">
+            <p class="title">Lesson #@Model.Lesson.Id</p>
+            <div class="field-container">
+               <div class="text-group">
+                  <p class="title">Name</p>
+                  <p class="info">@Model.Lesson.Name</p>
+               </div>
+               <div class="text-group">
+                  <p class="title">Description</p>
+                  <pre class="info">@Model.Lesson.Description</pre>
+               </div>
+               <br />
+               <form method="post" class="form-group">
+                  <input hidden asp-for="Lesson.Id" />
+                  <input type="submit" value="Delete" class="btn bg-btn btnRed" />
+               </form>
+            </div>
+         </div>
+      </div>
+   </div>
 </div>
