--- a/WCSTrainer/Pages/Shared/_Layout.cshtml
+++ b/WCSTrainer/Pages/Shared/_Layout.cshtml
@@ -6,8 +6,8 @@
    <head>
       <meta charset="utf-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <title>@ViewData["Title"] - WCSTrainer</title>
-
+      <title>WCSTrainer</title>
+      <link rel="icon" href="/images/favicon5.png">
       <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
       <link rel="stylesheet" href="~/css/mobileSite.css" asp-append-version="true" />
       <link rel="stylesheet" href="~/css/colors.css" asp-append-version="true" />
