--- a/WCSTrainer/Pages/TrainingOrders/Create.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Create.cshtml
@@ -45,7 +45,7 @@
                               </div>
                               <div class="selections">
                                  <ul id="traineeList" class="pill-container"></ul>
-                                 <div class="btn bg-btn btnWhite" onclick="openPeopleComponent('trainee')">
+                                 <div class="btn bg-btn btnWhite" onclick="openComponent('trainee')">
                                     <p>Select Trainee</p>
                                  </div>
                                  <input id="traineeInput" asp-for="TrainingOrder.TraineeId" hidden />
